# auth-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: build-containers.yaml
.sqlx/: query-1169d210f4e503e319eab9087d7b1805bf4881174bc3c6fdaffe8a0172fb4572.json  query-3ff780d939a386b7b9d1c8ec26a2310102680c804dc24d09ca1338203dc8cad7.json  query-652b19080e7efe014daacc9f277ffa831ba32e7816aa5339e412d26cbb5e4395.json  query-b8b8f09af8c0a36dbe22922fb473da189b48fad2e9f5722f124e07aea23161f8.json
database/: Dockerfile  docker-compose.yaml  grants_inserts.sql  helpers.sql  inserts.sql  roles_inserts.sql  tables.sql  views.sql
src/: docs.rs  hash_utils.rs  json_error.rs  jwt_stuff.rs  main.rs  util.rs
src/models/: login_data.rs  mod.rs  register_data.rs  token.rs
src/paths/: authorize.rs  login.rs  mod.rs  register.rs
