[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
argon2rs = "0.2.5"
jsonwebtoken = "9.3.0"
paste = "1.0.15"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { git = "https://github.com/HANDZCZ/utoipa.git", rev = "f83cec4", features = ["actix_extras", "non_strict_integers"] }
utoipa-scalar = { git = "https://github.com/HANDZCZ/utoipa.git", rev = "f83cec4", features = ["actix-web"] }
utoipauto = { git = "https://github.com/ProbablyClem/utoipauto.git", rev = "b7d8525" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
actix-jwt-middleware ={ git = "https://github.com/HANDZCZ/actix-jwt-middleware.git", rev = "cb89475"}
garde-actix-web = "0.10.0"
garde = { version = "0.20.0", features = ["derive", "email"] }
